force-app/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <businessProcesses>
        <fullName>VISEO_Sales_Process</fullName>
        <description>Sales process for VISEO Project Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Requirement Gathering</fullName>
        </values>
        <values>
            <fullName>Requirement Documentation</fullName>
        </values>
        <values>
            <fullName>User Story Finalization</fullName>
        </values>
        <values>
            <fullName>In Development</fullName>
        </values>
        <values>
            <fullName>QA</fullName>
        </values>
        <values>
            <fullName>UAT</fullName>
        </values>
        <values>
            <fullName>Live</fullName>
        </values>
        <values>
            <fullName>AMS</fullName>
        </values>
    </businessProcesses>
    <sharingModel>Private</sharingModel>
</CustomObject>