force-app/main/default/objects/Opportunity/fields/Current_Stage_Sign_Off_Complete__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Sign_Off_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Stage Sign Off Complete</label>
    <type>Checkbox</type>
</CustomField>