force-app/main/default/objects/Opportunity/fields/Delivery_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Methodology__c</fullName>
    <label>Delivery Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>Waterfall</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>