force-app/main/default/objects/Opportunity/fields/Discovery_Sign_Off_Complete__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Sign_Off_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Discovery stage sign-off document has been uploaded and approved. Set by the Upload Sign-Off Document flow and enforced by the stage-advance validation rule.</description>
    <inlineHelpText>Checked automatically when the Discovery sign-off is approved. Required before advancing past the Discovery stage.</inlineHelpText>
    <label>Discovery Sign Off Complete</label>
    <type>Checkbox</type>
</CustomField>