force-app/main/default/objects/Opportunity/fields/Planned_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Go_Live_Date__c</fullName>
    <label>Planned Go-Live Date</label>
    <type>Date</type>
</CustomField>