force-app/main/default/objects/Opportunity/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Project_Health__c</fullName>
    <label>Project Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Off Track</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>