force-app/main/default/objects/Opportunity/fields/Project_Scope__c.field-meta.xml
<CustomField>
    <fullName>Project_Scope__c</fullName>
    <label>Project Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>