force-app/main/default/objects/Opportunity/fields/Req_Documentation_Sign_Off_Complete__c.field-meta.xml
<CustomField>
    <fullName>Req_Documentation_Sign_Off_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Requirement Documentation stage sign-off document has been uploaded and approved. Set by the Upload Sign-Off Document flow and enforced by the stage-advance validation rule.</description>
    <inlineHelpText>Checked automatically when the Requirement Documentation sign-off is approved. Required before advancing past the Requirement Documentation stage.</inlineHelpText>
    <label>Requirement Documentation Sign Off Complete</label>
    <type>Checkbox</type>
</CustomField>