force-app/main/default/objects/Opportunity/fields/Requirement_Gathering_Sign_Off_Complete__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Gathering_Sign_Off_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the Requirement Gathering stage sign-off document has been uploaded and approved. Set by the Upload Sign-Off Document flow and enforced by the stage-advance validation rule.</description>
    <inlineHelpText>Checked automatically when the Requirement Gathering sign-off is approved. Required before advancing past the Requirement Gathering stage.</inlineHelpText>
    <label>Requirement Gathering Sign Off Complete</label>
    <type>Checkbox</type>
</CustomField>