force-app/main/default/objects/Opportunity/fields/Total_Actual_Mandays__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Mandays__c</fullName>
    <label>Total Actual Mandays</label>
    <summarizedField>Project_Sprint__c.Actual_Mandays__c</summarizedField>
    <summaryForeignKey>Project_Sprint__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>