force-app/main/default/objects/Opportunity/fields/Total_Sprints__c.field-meta.xml
<CustomField>
    <fullName>Total_Sprints__c</fullName>
    <label>Total Sprints</label>
    <summarizedField></summarizedField>
    <summaryForeignKey>Project_Sprint__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>