force-app/main/default/objects/Opportunity/fields/User_Story_Sign_Off_Complete__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Sign_Off_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the User Story Finalization stage sign-off document has been uploaded and approved. Set by the Upload Sign-Off Document flow and enforced by the stage-advance validation rule.</description>
    <inlineHelpText>Checked automatically when the User Story Finalization sign-off is approved. Required before advancing past the User Story Finalization stage.</inlineHelpText>
    <label>User Story Sign Off Complete</label>
    <type>Checkbox</type>
</CustomField>