force-app/main/default/objects/Opportunity/recordTypes/VISEO_Project_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>VISEO_Project_Opportunity</fullName>
    <active>true</active>
    <businessProcess>VISEO_Sales_Process</businessProcess>
    <description>Record type for VISEO project delivery opportunities, tracking delivery stages from Discovery through AMS.</description>
    <label>VISEO Project Opportunity</label>
</RecordType>