force-app/main/default/objects/Opportunity/validationRules/CloseDate_Required_For_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseDate_Required_For_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, "Closed Won"),
  ISBLANK(CloseDate)
)</errorConditionFormula>
    <errorMessage>Close Date is required when the Opportunity Stage is Closed Won.</errorMessage>
</ValidationRule>