force-app/main/default/objects/Opportunity/validationRules/Prevent_CloseDate_Change_After_ClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_CloseDate_Change_After_ClosedWon</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Closed Won&quot;),
  ISCHANGED(CloseDate),
  $Profile.Name != &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Close Date cannot be modified after the Opportunity is Closed Won.</errorMessage>
</ValidationRule>