force-app/main/default/objects/Opportunity/validationRules/Pricebook_Required_For_High_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Pricebook_Required_For_High_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Amount &gt; 50000,
    ISBLANK(Pricebook2Id)
)</errorConditionFormula>
    <errorMessage>A Price Book is required when Amount is greater than $50,000.</errorMessage>
    <errorDisplayField>Pricebook2Id</errorDisplayField>
    <description>Requires a Price Book to be selected when Opportunity Amount exceeds $50,000.</description>
</ValidationRule>