force-app/main/default/objects/Opportunity/validationRules/Sign_Off_Required_Before_Stage_Advance.validationRule-meta.xml
<ValidationRule>
    <fullName>Sign_Off_Required_Before_Stage_Advance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED(StageName),
  OR(
    AND(PRIORVALUE(StageName) = &quot;Discovery&quot;, NOT(Discovery_Sign_Off_Complete__c)),
    AND(PRIORVALUE(StageName) = &quot;Requirement Gathering&quot;, NOT(Req_Gathering_Sign_Off_Complete__c)),
    AND(PRIORVALUE(StageName) = &quot;Requirement Documentation&quot;, NOT(Req_Documentation_Sign_Off_Complete__c)),
    AND(PRIORVALUE(StageName) = &quot;User Story Finalization&quot;, NOT(User_Story_Sign_Off_Complete__c))
  )
)</errorConditionFormula>
    <errorMessage>Please complete and approve the sign-off document for the current stage before advancing.</errorMessage>
</ValidationRule>